<resources>
    <string name="en_show_map">Show map</string>
    <string name="en_manage_wifi_all_s">Wi-Fi MAP</string>
    <string name="en_enter_name_empty_s">Entered name must not be empty!</string>
    <string name="en_enter_ip_empty_s">Entered ip must not be empty!</string>
    <string name="en_enter_ip_invalid_s">Entered ip is not in correct format!</string>
    <string name="en_ip_valid_s">The correct format is XXX.XXX.XXX.XXX</string>
    <string name="en_enter_password_empty_s">Entered password must not be empty!</string>
    <string name="en_enter_address_empty_s">Entered address must not be empty!</string>
    <string name="en_please_give_time_s">Please give time before creating!</string>
    <string name="en_action_settings">Settings</string>
    <string name="en_hello_world">Hello world!</string>
    <string name="en_invalid_spot_credentials_s">Spot information was invalid! Try again!</string>
    <string name="en_home">Home</string>
    <string name="en_login">Login</string>
    <string name="en_map">T-Map</string>
    <string name="en_remember_me">Remember me!</string>
    <string name="en_password">Password:</string>
    <string name="en_username">Username:</string>
    <string name="en_description">With WI-FI Analyser you can remember and get all the Wi-Fi hot spots around you!</string>
    <string name="en_get_new_tasks">Get New Tasks</string>
    <string name="en_manage_wifi">Wi-Fi LIST</string>
    <string name="en_settings">Account Settings</string>
    <string name="en_exit">Exit</string>
    <string name="en_create">Create new</string>
    <string name="en_chose_region">Chose Region</string>
    <string name="en_number_of_tasks">Number of tasks</string>
    <string name="en_confirm_change">Confirm change</string>
    <string name="en_old_password">Old password:</string>
    <string name="en_new_password">New password:</string>
    <string name="en_repeat_password">Repeat password:</string>
    <string name="en_view_task">View task</string>
    <string name="en_task_list">Tasks</string>
    <string name="en_back">Back</string>
    <string name="en_name">Name:</string>
    <string name="en_id">Id:</string>
    <string name="en_confirm">Confirm</string>
    <string name="en_dismiss">Dismiss</string>
    <string name="en_cancel">Cancel</string>
    <string name="en_register">Register</string>
    <string name="en_email">Email:</string>
    <string name="en_confirm_password">Confirm password:</string>
    <string name="en_ip">IP</string>
    <string name="en_logged_in_as">Hello,  </string>
    <string name="en_logout">Logout</string>
    <string name="en_server_name">https://fast-citadel-2324.herokuapp.com/</string>
    <string name="en_menu_s">Menu</string>
    <string name="en_view_task_s">View Tasks</string>
    <string name="en_get_new_task_s">Get New Tasks</string>
    <string name="en_manage_wifi_s">Wi-Fi LIST</string>
    <string name="en_please_comple_s">Please complete all the feilds!</string>
    <string name="en_password_nomatch_s">Your password does not match the confirmation, check again!</string>
    <string name="en_tasks_s">tasks</string>
    <string name="en_something_wrong_s">Something went wrong. Retry!</string>
    <string name="en_no_internet_login_s">You are not connected to the internet to login!</string>
    <string name="en_no_internet_tochangeinfo_s">You are not connected to the internet to update your information!</string>
    <string name="en_no_internet_tosendnew_s">You are not connected to the internet to send the new wifi spot!</string>
    <string name="en_invalid_credentials_s">Email and/or password are invalid. Retry!</string>
    <string name="en_session_expired_s">Your session has expired!</string>
    <string name="en_no_internet_manage_s">You are not connected to the internet to load the wifi spots!</string>
    <string name="en_no_internet_toupdate_s">You are not connected to send the update!</string>
    <string name="en_name_s">Name</string>
    <string name="en_address_s">Address</string>
    <string name="en_keyword_s">Keyword</string>
    <string name="en_website_s">Website</string>
    <string name="en_status_s">Status</string>
    <string name="en_password_s">Password</string>
    <string name="en_ip_s">Ip</string>
    <string name="en_edit_s">Edit</string>
    <string name="en_no_internet_toregister_s">You are not connected to the internet to register!</string>
    <string name="en_no_internet_tologout_s">You are not connected to the internet to logout!</string>
    <string name="en_no_internet_s">You are not connected to the internet!</string>
    <string name="en_loading_offline_task_s">Loading offline tasks!</string>
    <string name="en_no_tasks_s">There are no tasks available!</string>
    <string name="en_please_connect_togettask_s">Please connect to the internet and get new tasks!</string>
    <string name="en_no_internet_toupdate_status_s">You are not connected to the internet to update the status!</string>
    <string name="en_available_time">Available time:</string>
    <string name="en_seconds">secs</string>
    <string name="en_minutes">mins</string>
    <string name="en_hours">hours</string>
    <string name="en_view_wifi_all_s">Wi-Fi MAP</string>
    <string name="en_no_spots_s">No wifi spots found!</string>
    <string name="en_loading_offline_spots_s">Loading offline spots&#8230;</string>
    <string name="en_please_connect_togetspots_s">Please connect to the internet to get the latest wifi spots!</string>
    <string name="en_connect_to_wifi">Please connect to a WiFi!</string>
    <string name="en_active_spot">Is spot active?</string>
    <string name="en_no_specified_coordinates_s">You have not specified the spot on the map! Please, click on the map!</string>
    <string name="en_create_new_spot">New Spot</string>
    <string name="en_tabs_title">Main Menu</string>
    <string name="en_app_name">Wi-Fi Analyser</string>
    <string name="en_web_browser">Web Browser</string>
    <string name="en_updateing_info">Updating your information&#8230;</string>
    <string name="en_creating_new_spot">Creating new spot&#8230;</string>
    <string name="en_creating_wifi_spot">Creating wifi spot&#8230;</string>
    <string name="en_token_expired">Session has expired</string>
    <string name="en_minutes_not_less_zero">The minutes must not be less than 0</string>
    <string name="en_hours_not_less_zero">The hours must not be less than 0</string>
    <string name="en_no_tasks_invalid_time">No tasks added because you probably gave invalid time!</string>
    <string name="en_no_tasks_found">No tasks found!</string>
    <string name="en_error_loading_marker_location">Error loading marker location!</string>
    <string name="en_problem_loading_map">Problem loading map!</string>
    <string name="en_get_near_road_for_root">You are not near a road to get a root to your next task</string>
    <string name="en_logging_out">Logging out&#8230;</string>
    <string name="en_logging_in">Logging in&#8230;</string>
    <string name="en_updating_information">Updating your information&#8230;</string>
    <string name="en_loading_wifi_spots">Loading wifi spots&#8230;</string>
    <string name="en_error_loading_spots">Error in loading spot</string>
    <string name="en_error_loading_task">Error in loading task</string>
    <string name="en_getting_wifi_spots">Getting wifi spots&#8230;</string>
    <string name="en_register_new_account">Registering new account&#8230;</string>
    <string name="en_verify_status">Verifying status&#8230;</string>
    <string name="en_loading_tasks">Loading tasks&#8230;</string>
    <string name="en_error_reading_status">There was an error readin the status</string>
    <string name="en_finished_task_no_change">Task is already completed when it was set to:Finished</string>
    <string name="en_editing_popup">Editing Wi-Fi spot</string>
    <string name="en_current_page">Current page</string>
    <string name="en_pick_new_page">Pick new page</string>
    <string name="en_confrimation_message">Are you sure?</string>
    <string name="en_offer_to_miss_tasks">Do you wish to set the unfinished tasks to Missed?</string>
    <string name="en_not_all_tasks_finished">Please Complete or Cancel your unfinished tasks!</string>
    <string name="en_no">No</string>
    <string name="en_yes">Yes</string>
    <string name="en_please_wait">Please wait&#8230;</string>
    <string name="en_would_you_like">Would you like to set all your current tasks to missed?</string>
    <string name="en_search">Search</string>
    <string name="bg_cancel">Отказ</string>
    <string name="bg_app_name">Wi-Fi Анализатор</string>
    <string name="bg_show_map">Покажи карта</string>
    <string name="bg_manage_wifi_all_s">Wi-Fi СПИСЪК</string>
    <string name="bg_enter_name_empty_s">Въведенето име требва да не е празно!</string>
    <string name="bg_enter_ip_empty_s">Въведеното IP трябва да не е празно!</string>
    <string name="bg_enter_ip_invalid_s">Въведенето IP не е в коректният формат!</string>
    <string name="bg_ip_valid_s">Коректният формат е XXX.XXX.XXX.XXX</string>
    <string name="bg_enter_password_empty_s">Въведенета парола трябва да не е празна!</string>
    <string name="bg_enter_address_empty_s">Въведеният адрес трябва да не е празен!</string>
    <string name="bg_please_give_time_s">Моля посочете време преди създаването!</string>
    <string name="bg_action_settings">Настройки</string>
    <string name="bg_hello_world">Здравей свят!</string>
    <string name="bg_invalid_spot_credentials_s">Информацията за мрежата беше невалидна! Пробвайте пак!</string>
    <string name="bg_home">Home</string>
    <string name="bg_login">Влез</string>
    <string name="bg_map">Зад. Карта</string>
    <string name="bg_remember_me">Запомни ме!</string>
    <string name="bg_password">Парола:</string>
    <string name="bg_username">Потребител:</string>
    <string name="bg_description">С  WI-FI Анализатор можете да получите всички мрежи около Вас и да получавате информация и анализи за тях!</string>
    <string name="bg_get_new_tasks">Вземи нови задачки</string>
    <string name="bg_manage_wifi">Wi-Fi СИПСЪК</string>
    <string name="bg_settings">Потребителски Настройки</string>
    <string name="bg_exit">Изход</string>
    <string name="bg_create">Създай нов</string>
    <string name="bg_tasks_s">задачки</string>
    <string name="bg_chose_region">Избери Регион </string>
    <string name="bg_number_of_tasks">Брой задачки</string>
    <string name="bg_confirm_change">Потвърди промяната</string>
    <string name="bg_old_password">Стара парола:</string>
    <string name="bg_new_password">Нова парола:</string>
    <string name="bg_repeat_password">Повтори паролата:</string>
    <string name="bg_view_task">Виж задачките</string>
    <string name="bg_task_list">Задачки</string>
    <string name="bg_back">Назад</string>
    <string name="bg_name">Име:</string>
    <string name="bg_id">Id:</string>
    <string name="bg_confirm">Потвърди</string>
    <string name="bg_dismiss">Отпрати</string>
    <string name="bg_register">Регистриране</string>
    <string name="bg_email">Email:</string>
    <string name="bg_confirm_password">Потвърди паролата:</string>
    <string name="bg_ip">IP</string>
    <string name="bg_logged_in_as">Здравей, </string>
    <string name="bg_logout">Излез от потребител</string>
    <string name="bg_server_name">https://fast-citadel-2324.herokuapp.com/</string>
    <string name="bg_menu_s">Меню</string>
    <string name="bg_view_task_s">Виж задачките</string>
    <string name="bg_get_new_task_s">Вземи нови задачки</string>
    <string name="bg_manage_wifi_s">Wi-Fi СПИСЪК</string>
    <string name="bg_please_comple_s">Моля, попълнете всички полета!</string>
    <string name="bg_password_nomatch_s">Паролата не съвпада! Проверете и опитайте пак!</string>
    <string name="bg_something_wrong_s">Имаше грешка при изпращането! Опитайте пак, ако грешката продължи се свържете с нас!</string>
</resources>