<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/en_login" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="67dp"
        android:text="@string/en_remember_me" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remember_me"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/en_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_login"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/en_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username_login"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="38dp"
        android:text="@string/en_description" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/login_button"
        android:layout_marginTop="14dp"
        android:text="@string/en_register" />

</RelativeLayout>