<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center_horizontal" >

    <!-- android:background="@color/common_signin_btn_light_text_default" -->

    <EditText
        android:id="@+id/new_name_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_name"
        android:paddingTop="10dp" />

    <requestFocus
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/new_pass_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_password"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/new_address_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_address_s"
        android:inputType="textCapSentences"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/new_ip_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_ip"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/dismiss_button_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelCreating"
        android:text="@string/en_cancel" />

    <Button
        android:id="@+id/confirm_button_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="confirmCreating"
        android:paddingTop="10dp"
        android:text="@string/en_confirm" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <fragment
            android:id="@+id/map_new"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

    </FrameLayout>
</LinearLayout>