<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/name_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/en_description" />

    <Button
        android:id="@+id/register_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_popup"
        android:layout_below="@+id/password_register"
        android:layout_marginTop="75dp"
        android:onClick="registerNewAccount"
        android:text="@string/en_register" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_popup"
        android:layout_below="@+id/name_popup"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/en_username"
        android:inputType="text" />

    <requestFocus />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_register"
        android:layout_below="@+id/email_register"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/en_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_pass_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_register"
        android:layout_below="@+id/password_register"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/en_confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_register"
        android:layout_below="@+id/username_register"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/en_email"
        android:inputType="textEmailAddress" >
    </EditText>

</RelativeLayout>