<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical" >
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/available_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/en_available_time" />

        <EditText
            android:id="@+id/hours"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:ems="10"
            android:hint="@string/en_hours"
            android:inputType="number" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:ems="10"
            android:hint="@string/en_minutes"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/number_of_tasks_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/en_number_of_tasks" />

        <Spinner
            android:id="@+id/number_of_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="100dp" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/en_create" />
    </FrameLayout>

</LinearLayout>