<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/login_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="26dp"
        android:layout_marginTop="160dp"
        android:layout_toLeftOf="@+id/register_home"
        android:text="@string/en_login" />

    <TextView
        android:id="@+id/name_popup"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/en_home"
        android:textSize="60sp" />

    <Button
        android:id="@+id/register_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_open"
        android:layout_alignBottom="@+id/login_open"
        android:layout_alignRight="@+id/name_popup"
        android:text="@string/en_register" />

    <!-- <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_open"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="runGoogle"
        android:text="@string/map" />
 -->

</RelativeLayout>
