<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_signin_btn_light_text_default"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/id_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/name_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/new_name_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_name"
        android:paddingTop="10dp" />

    <requestFocus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/new_pass_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_password"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_ip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/new_id_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/en_ip"
        android:paddingTop="10dp" />

    <CheckBox
        android:id="@+id/new_spot_active_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/en_active_spot" />
 <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
    <ImageButton
        android:id="@+id/dismiss_button_popup"
        android:layout_width="140dp"
        android:layout_height="70dp"

        android:src="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/confirm_button_popup"
        android:layout_width="140dp"
        android:layout_height="70dp"
      
        android:paddingTop="10dp"
        android:layout_marginLeft="150dp"
       android:src="@drawable/check_mark" />
</FrameLayout>
</LinearLayout>